# dingus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  org.meemus.dingus.json  org.meemus.tw.json
docs/: code.md
resources/share/dingus/scripts/: preferences.lua  setup.lua  start.lua
resources/share/dingus/shaders/: edges.frag  edges.vert  flat.frag  flat.vert  glyph.frag  ui.frag  ui.vert
src/: CMakeLists.txt  component.c  component.h  config.h.in  main.c  oldmain.c  oldmain.pp  organic.h  print.c  print.h  test.txt
src/components/: CMakeLists.txt  center.c  center.h  right.c  right.h  text.c  text.h  top.c  top.h  view.c  view.h
src/core/: CMakeLists.txt  TEO.C  buffer.c  buffer.h  component.c  component.h  component_props.h  component_props.inc  engine.c  engine.h  frame.c  frame.h  log.h  lua.c  lua.h  math.h  oldshader.txt  pool.c  pool.h  print.c  print.h  resource_props.h  resources.c  resources.h  sdl.c  sdl.h  shader.c  shader.h  texture.c  texture.h  ui.h
src/core/math/: CMakeLists.txt  functions.h  matrix.c  nettle.c  plane.c  rectangle.c  vector.c
src/core/resources/: CMakeLists.txt  resources.c  resources.h  shader.c  shader.h  texture.c  texture.h
src/core/ui/: CMakeLists.txt  component.c  component.h  component_props.inc  entity.c  entity.h  entity_props.inc  print.c  print.h  print_utf8.c  print_utf8.h  window.c  window.h
src/core/ui/entities/: center.c  center.h  right.c  right.h  text.c  text.h  top.c  top.h  view.c  view.h
src/fun/: CMakeLists.txt  model.c  object.c  object.h  scene.c  scene.h
src/fun/body/: CMakeLists.txt  body.h  sphere.c  sphere.h  triangle.c  triangle.h  types.h
src/math/: collision.h  functions.h  math.h  matrix.c  nettle.c  nettle.h  plane.c  rectangle.c  sphere.c  triangle.c  types.h  vector.c
src/math/old/: Untitled-2.NO  Untitled-3.NO
